gccida/c2/invalidate_for_call
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/invalidate_for_call/src/cse.c:2844:47: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v34 = ( unsigned int)v31 + ( ( unsigned int)( mode_class_0[( unsigned __int8)v32] - 5) < 2) + 1; 
                                              ^~~~~~~~~~~~
                                              mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/invalidate_for_call/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/invalidate_for_call/src/obj/cse.o] Error 1
